# cat-face-detection

./: docker-compose.yml
python/: Dockerfile
python/data/train/: .gitignore
python/src/: face_detaction.py  printCatFace.py  pyproject.toml
